# python-project-50

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: gendiff.py  utils.py
gendiff/diff_builder/: builder.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/parsers/: parser.py
gendiff/scripts/: main.py  read_json.py
tests/: test_gendiff.py  test_gendiff_json.py  test_open_files.py  test_open_json.py  test_parser.py
tests/fixtures/: expected_json.json  expected_plain.txt  expected_stylish.txt
